--- a/cooperacion-web/src/main/webapp/app/datosCe.xhtml
+++ b/cooperacion-web/src/main/webapp/app/datosCe.xhtml
@@ -70,7 +70,7 @@
     </ui:define>
 
     <f:metadata>
-        <f:event listener="#{userBean.validarCentroEscolar}" type="preRenderView" />
+        <f:event listener="#{userBean.validarUsuario('CE')}" type="preRenderView" />
     </f:metadata>
 
     <ui:define name="contenido">
