--- a/cooperacion-web/src/main/webapp/app/inicio.xhtml
+++ b/cooperacion-web/src/main/webapp/app/inicio.xhtml
@@ -41,7 +41,7 @@
                 </div>
 
 
-                <div id="features" style="max-width: 1024px!important; margin: 0 auto; position: absolute;left: 50%;top: 40%;transform: translate(-50%, -50%);padding: 10px;">
+                <div id="features" style="max-width: 1024px!important; margin: 0 auto; position: absolute;left: 50%;top: 310px;transform: translate(-50%, -50%);padding: 10px;">
                     <div>
                         <div class="p-grid features-content">
                             <div class="p-col-12 p-md-6 feature-left" onclick="location.href = 'datosCe.mined';" 
@@ -54,6 +54,15 @@
                                 <p:graphicImage name="lista.png" library="images" style="background-color: white;"/>
                                 <h3>Listado de Proyectos</h3>
                                 <p>Listado de todos los proyectos registrados y el estado de cada uno de estos.</p>
+                            </div>
+                        </div>
+                        <br/>
+                        <br/>
+                        <div class="p-grid features-content">
+                            <div class="p-col-12 p-md-6 feature-left" onclick="location.href = 'mantto/inicioManttos.mined';" style="cursor: pointer;">
+                                <p:graphicImage name="settings.png" library="images" style="background-color: white;"/>
+                                <h3>Mantenimientos</h3>
+                                <p>Mantenimiento de los diferentes catalogos de la herramienta.</p>
                             </div>
                         </div>
                     </div>
