--- a/cooperacion-web/src/main/webapp/index.xhtml
+++ b/cooperacion-web/src/main/webapp/index.xhtml
@@ -2,7 +2,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui"
       xmlns:jsf="http://xmlns.jcp.org/jsf">
 
@@ -13,7 +12,7 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
             <meta name="apple-mobile-web-app-capable" content="yes" />
         </f:facet>
-        <title>MINEDUCYT - Cooperación a Centros Educativos</title>
+        <title>Cooperación a Centros Educativos</title>
     </h:head>
 
     <h:body styleClass="login-body">
