--- a/envio-web/src/main/webapp/envioArchivo.xhtml
+++ b/envio-web/src/main/webapp/envioArchivo.xhtml
@@ -75,24 +75,9 @@
                                             </p:textEditor>
                                         </p:panelGrid>
 
-                                        <p:panelGrid id="pngUpload" columns="2" columnClasses="ui-g-12 ui-md-4 col4_left, ui-g-12 ui-md-8 col8_left"
-                                                     style="margin: 0 auto;" 
-                                                     styleClass="form-group ui-panelgrid-blank" layout="grid">
-                                            <p:outputLabel value="Archivo con listado de destinatarios"/>
-                                            <p:outputPanel rendered="#{not envioArchivoView.showUploadFile}">
-                                                <p:outputLabel value="#{envioArchivoView.file.fileName}" />
-                                                <p:spacer width="10"/>
-                                                <p:commandButton value="¿Reemplazar archivo?" action="#{envioArchivoView.reemplazarArchivo()}" update="pngUpload" style="width: 150px;"/>
-                                            </p:outputPanel>
-                                            <p:fileUpload id="updFile" listener="#{envioArchivoView.handleFileUpload}" auto="true" widgetVar="updFile" fileLimit="1" rendered="#{envioArchivoView.showUploadFile}"
-                                                          label="Seleccionar" allowTypes="/(\.|\/)(xlsx|pdf)$/" invalidFileMessage="Unicamente archivos Excel (xlsx) y PDF" 
-                                                          mode="advanced" update="pngUpload btnEnviar"
-                                                          onstart="PF('dlgEspera').show();" oncomplete="PF('dlgEspera').hide();"/>
-
-                                        </p:panelGrid>
                                         <br/>
                                         <p:panelGrid columns="3" columnClasses="ui-g-5, ui-g-2, ui-g-5" style="margin: 0 auto; text-align: center; width: 360px;"  styleClass="form-group ui-panelgrid-blank" layout="grid">
-                                            <p:commandButton id="btnEnviar" value="Enviar" disabled="#{envioArchivoView.showUploadFile}"
+                                            <p:commandButton id="btnEnviar" value="Enviar" 
                                                              action="#{envioArchivoView.validarFormulario()}" style="width: 200px;" />
                                             <p:spacer/>
                                             <p:commandButton id="btnCerrar" widgetVar="btnCerrar" value="Cerrar"
