envio de archivo

--- a/envio-web/src/main/webapp/envioArchivo.xhtml
+++ b/envio-web/src/main/webapp/envioArchivo.xhtml
@@ -92,6 +92,7 @@
                                 </p:outputPanel>
 
                                 <p:inputText value="#{envioArchivoView.codigoDepartamento}" />
+                                <p:inputText value="#{envioArchivoView.idEnvio}" />
                                 <p:commandButton value="separar" action="#{envioArchivoView.separar()}" />
 
                             </h:form>
