--- a/envio-web/src/main/webapp/envioArchivo.xhtml
+++ b/envio-web/src/main/webapp/envioArchivo.xhtml
@@ -93,6 +93,10 @@
 
                                 <p:inputText value="#{envioArchivoView.codigoDepartamento}" />
                                 <p:inputText value="#{envioArchivoView.idEnvio}" />
+                                <br/>
+                                <br/>
+                                <p:inputText value="#{envioArchivoView.idInicio}" />
+                                <p:inputText value="#{envioArchivoView.idFin}" />
                                 <p:commandButton value="separar" action="#{envioArchivoView.separar()}" />
 
                             </h:form>
