--- a/boleta-web/src/main/webapp/app/envio.xhtml
+++ b/boleta-web/src/main/webapp/app/envio.xhtml
@@ -52,6 +52,7 @@
                             <p:selectOneMenu value="#{boletaMB.anho}">
                                 <f:selectItem itemLabel="2019" itemValue="2019"/>
                                 <f:selectItem itemLabel="2020" itemValue="2020"/>
+                                <f:selectItem itemLabel="2021" itemValue="2021"/>
                                 <p:ajax listener="#{boletaMB.cargarArchivos()}" update="tblPendiente tblProcesado pngResumen updFile"/>
                             </p:selectOneMenu>
                         </p:outputPanel>
